<resources>
    <string name="app_name">Chat App</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="have_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="profile">Profile</string>
    <string name="def_name">Mojombo</string>
    <string name="update">Update</string>
    <string name="message_type">Ketikan Pesan...</string>
    <string name="ex_message">Hai Mojo</string>
</resources>